--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,16 @@
 .gradle
 /local.properties
 /.idea/caches
+/.idea/codeStyles
+/.idea/vcs.xml
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
+/.idea/dictionaries
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+app/libs/
