--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion compileSdkVersionNumber
     defaultConfig {
         applicationId "com.android.team.moshey"
-        minSdkVersion 22
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion minSdkVersionNumber
+        targetSdkVersion targetSdkVersionNumber
+        versionCode appVersion
+        versionName versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -23,16 +23,17 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha03'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha05'
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation androidx.appcompat
+    implementation androidx.cardview
+    implementation androidx.recyclerview
+    implementation androidx.constraint_layout
+    implementation androidx.material_design
+    implementation androidx.room
+    annotationProcessor androidx.room_compiler
+    implementation squareup.retrofit2
+    implementation bumptech.glide
+    annotationProcessor bumptech.glide_compiler
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
+    androidTestImplementation androidx.test_runner
+    androidTestImplementation androidx.espresso_core
 }
