--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -24,4 +24,7 @@ ext {
             'glide'         : 'com.github.bumptech.glide:glide:4.9.0',
             'glide_compiler': 'com.github.bumptech.glide:compiler:4.9.0'
     ]
+    firebase = [
+            'core':'com.google.firebase:firebase-core:16.0.6'
+    ]
 }
