--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -5,17 +5,21 @@ ext {
     compileSdkVersionNumber = 28
     targetSdkVersionNumber = 28
     room_version = "2.1.0-alpha06"
+    lifecycle_version = '2.0.0'
 
     androidx = [
-            'appcompat'        : 'androidx.appcompat:appcompat:1.1.0-alpha03',
-            'cardview'         : 'androidx.cardview:cardview:1.0.0',
-            'recyclerview'     : 'androidx.recyclerview:recyclerview:1.1.0-alpha03',
-            'constraint_layout': 'androidx.constraintlayout:constraintlayout:1.1.3',
-            'material_design'  : 'com.google.android.material:material:1.1.0-alpha05',
-            'test_runner'      : 'androidx.test:runner:1.1.2-alpha02',
-            'espresso_core'    : 'androidx.test.espresso:espresso-core:3.2.0-alpha02',
-            'room'             : "androidx.room:room-runtime:$room_version",
-            'room_compiler'    : "androidx.room:room-compiler:$room_version"
+            'appcompat'           : 'androidx.appcompat:appcompat:1.1.0-alpha03',
+            'cardview'            : 'androidx.cardview:cardview:1.0.0',
+            'recyclerview'        : 'androidx.recyclerview:recyclerview:1.1.0-alpha03',
+            'constraint_layout'   : 'androidx.constraintlayout:constraintlayout:1.1.3',
+            'material_design'     : 'com.google.android.material:material:1.1.0-alpha05',
+            'test_runner'         : 'androidx.test:runner:1.1.2-alpha02',
+            'espresso_core'       : 'androidx.test.espresso:espresso-core:3.2.0-alpha02',
+            'room'                : "androidx.room:room-runtime:$room_version",
+            'room_compiler'       : "androidx.room:room-compiler:$room_version",
+            'lifecycle_extensions': "androidx.lifecycle:lifecycle-extensions:$lifecycle_version",
+            'lifecycle_compiler'  : "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version",
+            'lifecycle_runtime'   : "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     ]
     squareup = [
             'retrofit2': 'com.squareup.retrofit2:retrofit:2.5.0'
@@ -25,6 +29,6 @@ ext {
             'glide_compiler': 'com.github.bumptech.glide:compiler:4.9.0'
     ]
     firebase = [
-            'core':'com.google.firebase:firebase-core:16.0.6'
+            'core': 'com.google.firebase:firebase-core:16.0.6'
     ]
 }
