--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:label="Book A Ticket"
             android:name=".ui.BookingActivity"
+            android:label="Book A Ticket"
             android:parentActivityName=".ui.MosheyActivity" />
         <activity
             android:name=".ui.MosheyActivity"
@@ -24,6 +24,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".models.services.MosheySyncIntentService"
+            android:exported="false" />
+
+        <service
+            android:name=".models.services.MosheyFirebaseService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
