--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -25,7 +25,13 @@ ext {
             'glide'         : 'com.github.bumptech.glide:glide:4.9.0',
             'glide_compiler': 'com.github.bumptech.glide:compiler:4.9.0'
     ]
+    firestoreDb = '18.1.0'
+    firestoreUi = '4.3.1'
     firebase = [
-            'core': 'com.google.firebase:firebase-core:16.0.6'
+            'core'          : 'com.google.firebase:firebase-core:16.0.6',
+            'firestoreDb'   : "com.google.firebase:firebase-firestore:$firestoreDb",
+            'firestoreUi'   : "com.firebaseui:firebase-ui-firestore:$firestoreUi",
+            'job_dispatcher': 'com.firebase:firebase-jobdispatcher:0.8.6'
+
     ]
 }
