[Finishes #165036253] UI enhancements and Project Description on about us

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
+            android:name=".ui.AboutUsActivity"
+            android:parentActivityName=".ui.MosheyActivity" />
+        <activity
             android:name=".ui.BookingActivity"
             android:label="Book A Ticket"
             android:parentActivityName=".ui.MosheyActivity" />
