--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation firebase.core
     implementation firebase.firestoreDb
     implementation firebase.firestoreUi
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     annotationProcessor androidx.room_compiler
     annotationProcessor androidx.lifecycle_compiler
     annotationProcessor bumptech.glide_compiler
