--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/codeStyles
-/.idea/vcs.xml
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/dictionaries
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+/.idea/
 .DS_Store
 /build
 /captures
