--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion compileSdkVersionNumber
+    compileSdkVersion SdkVersionNumber
     defaultConfig {
         applicationId "com.android.team.moshey"
         minSdkVersion minSdkVersionNumber
-        targetSdkVersion targetSdkVersionNumber
+        targetSdkVersion SdkVersionNumber
         versionCode appVersion
         versionName versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -39,8 +39,14 @@ dependencies {
     implementation firebase.core
     implementation firebase.firestoreDb
     implementation firebase.firestoreUi
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation (squareup.retrofit) {
+        exclude module: 'okhttp'
+    }
+    implementation squareup.retrofit_gson_converter
+    implementation squareup.okhttp
+    implementation squareup.okhttp_logging
+    debugImplementation square.leak_canary_debug
+    releaseImplementation square.leak_canary_release
     annotationProcessor androidx.room_compiler
     annotationProcessor androidx.lifecycle_compiler
     annotationProcessor bumptech.glide_compiler
